Point ncct icon link to qbic-portal

--- a/ncct/site/sequencing-solutions/instruments.html
+++ b/ncct/site/sequencing-solutions/instruments.html
@@ -17,28 +17,28 @@
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item">Illumina NextSeq500<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="flexible mid-output sequencer"/></li>
                                 <li class="bs4-list-group-item">Illumina MiSeq<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="low-output sequencer"/></li>
                                 <li class="bs4-list-group-item">Illumina NovaSeq6000<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="production scale instrument"/></li>
                                 <li class="bs4-list-group-item">ONT MinION<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="low throughput long read sequencer"/></li>
                                 <li class="bs4-list-group-item">ONT PromethION<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="high throughput long-read sequencer
 "/></li>
                                 <li class="bs4-list-group-item">PacBio Sequel II<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="accurate long-read sequencer"/></li>
                             </ul>
                         </div>
@@ -52,35 +52,35 @@
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item">Qiagen QIAcube<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="high throughput isolation"/></li>
                                 <li class="bs4-list-group-item">Agilent Bravo<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="production scale liquid handler"/></li>
                                 <li class="bs4-list-group-item">Qiagen QIASymphony<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="high throughput isolation"/></li>
                                 <li class="bs4-list-group-item">Tecan Fluent 780<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="high throughput liquid handler"/></li>
                                 <li class="bs4-list-group-item">MGISP-100<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="mid throughput liquid handler"/></li>
                                 <li class="bs4-list-group-item">10x Genomics<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="single cell emulsion preparation"/></li>
                                 <li class="bs4-list-group-item">Beckman Biomek i5<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
                                     title="high throughput liquid handler"/></li>
                                 <li class="bs4-list-group-item">Beckman Biomek i7<img
                                     class="ncct-information-icon"
-                                    src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                    src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273"
                                     title=" high throughput liquid handler"/></li>
                             </ul>
                         </div>
