--- a/ncct/site/sequencing-solutions/methods.html
+++ b/ncct/site/sequencing-solutions/methods.html
@@ -15,27 +15,27 @@
                         <ul class="bs4-list-group bs4-text-left">
                             <li class="bs4-list-group-item">Whole Genome sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of the whole genome of an organism, including coding and non-coding regions"/>
                             </li>
                             <li class="bs4-list-group-item">Long-Read sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of long inserts of DNA allowing better mapping and phasing of the genome"/>
                             </li>
                             <li class="bs4-list-group-item">Panel sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="In depth sequencing of a particular set of DNA regions using panels"/>
                             </li>
                             <li class="bs4-list-group-item">Exome sequencing<img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of all protein coding regions of the genome of an organism"/>
                             </li>
                             <li class="bs4-list-group-item">Targeted RNA sequencing<img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of a subset of transcripts enabling both qualitative and quantitative expression analysis"/>
                             </li>
                         </ul>
@@ -49,37 +49,37 @@
                         <ul class="bs4-list-group bs4-text-left">
                             <li class="bs4-list-group-item">mRNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of all messenger RNA transcripts which provides information on the whole coding transcriptome of an organism"/>
                             </li>
                             <li class="bs4-list-group-item">Total RNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of all types of RNAs present, including diverse small and non-coding RNAs"/>
                             </li>
                             <li class="bs4-list-group-item">3'-Sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of transcripts 3’ UTR allowing gene expression analysis with high sensitivity and in degraded sample"/>
                             </li>
                             <li class="bs4-list-group-item">scRNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing the RNA of individual cells to capture cell heterogeneity"/>
                             </li>
                             <li class="bs4-list-group-item">miRNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of micro RNAs which confer gene silencing and are often associated with various cellular mechanisms"/>
                             </li>
                             <li class="bs4-list-group-item">smallRNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of small RNAs (including micro RNA) which exert diverse functions of gene regulation"/>
                             </li>
                             <li class="bs4-list-group-item"><span>long-Read RNA sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of full-length RNA allowing precise isoform detection"/></span>
                             </li>
                         </ul>
@@ -93,17 +93,17 @@
                         <ul class="bs4-list-group bs4-text-left">
                             <li class="bs4-list-group-item">Shotgun Metagenomics <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of all genomic information of a sample containing DNA of a community of organisms"/>
                             </li>
                             <li class="bs4-list-group-item">16S/Amplicon Sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of the 16S rRNA coding region to identify different taxa in a sample containing DNA of diverse organisms"/>
                             </li>
                             <li class="bs4-list-group-item">Metatranscriptomics <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Sequencing of the RNA in a heterogenous sample to analyse gene expression in a community of organisms"/>
                             </li>
                         </ul>
@@ -117,7 +117,7 @@
                         <ul class="bs4-list-group bs4-text-left">
                             <li class="bs4-list-group-item">Whole genome bisulfite sequencing <img
                                 class="ncct-information-icon"
-                                src="https://https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598273.qbic.uni-tuebingen.de/documents/50393/59129/information+icon/8b958026-21f8-43ce-8072-cf96fd191273?t=1635862610250"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/Information+Icon+blue/245b807e-14ba-49fd-9d8a-107e0226c906?t=1636365598000"
                                 title="Investigation of the methylation pattern in the whole genome of an organism"/>
                             </li>
                         </ul>
